@@ -679,15 +679,6 @@ getBuildNumber (void)
 }
 
 /*-----------------------------------------------------------------*/
-/* getBuildDate - return build date                                */
-/*-----------------------------------------------------------------*/
-const char *
-getBuildDate (void)
-{
-  return __DATE__;
-}
-
-/*-----------------------------------------------------------------*/
 /* getBuildEnvironment - return environment used to build SDCC     */
 /*-----------------------------------------------------------------*/
 const char *
